force-app/main/default/objects/GTM_Readout__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <description>The user who approved this readout. Stamped by the GtmReadoutApprovalSync trigger from the running user at the moment Status__c becomes Approved -- during a final-approval field update that is the approver. ProcessInstanceStep.ActorId remains the audit record of record; this field is the reportable copy.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Readouts</relationshipLabel>
    <relationshipName>Approved_GTM_Readouts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>