force-app/main/default/objects/GTM_Readout__c/fields/Approved_Content__c.field-meta.xml
<CustomField>
    <fullName>Approved_Content__c</fullName>
    <description>Snapshot of Draft_Content__c copied over on approval -- this is what publish exposes, never the live Draft_Content__c.</description>
    <label>Approved Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>