force-app/main/default/objects/GTM_Readout__c/fields/Approved_Data__c.field-meta.xml
<CustomField>
    <fullName>Approved_Data__c</fullName>
    <description>The copy of Readout_Data__c taken at the moment of approval, exactly as Approved_Content__c is the copy of Draft_Content__c. GtmReadoutPublicController serves this one, never Readout_Data__c, so the structured half of a published readout is fixed by the approval in the same way the prose half is. Written by GtmReadoutApprovalHandler.stampApproval.</description>
    <label>Approved Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>