force-app/main/default/objects/GTM_Readout__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>Approved Date</label>
    <description>Stamped by the GtmReadoutApprovalSync trigger when Status__c moves into Approved -- which in production is the GTM_Readout_Approval process's final-approval field update. ProcessInstance.CompletedDate is the audit record; this field exists so list views and reports can sort on it without a subquery.</description>
    <type>DateTime</type>
</CustomField>