force-app/main/default/objects/GTM_Readout__c/fields/Assessment_Request__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Request__c</fullName>
    <label>Assessment Request</label>
    <!-- NOT required, deliberately - this contradicts the field's original
         authored metadata (required=true), which was a genuine pre-existing
         bug: requirement #5 (docs/handoff/2026-09-07-assessment-readout.md)
         is that orphan readouts - ones with no assessment request at all -
         are a real, supported state that routes to the GTM_Readout_Triage
         queue. GtmReadoutAgentContextTest.aReadoutWithNoAssessmentSaysSoRatherThanFailing
         inserts exactly such a readout and always has; required=true would
         make that insert fail every time, which it does empirically against
         this org. Never caught before because nothing on this branch had
         ever been deployed. -->
    <description>The assessment this readout was generated from, or blank for an orphan readout routed to GTM_Readout_Triage.</description>
    <type>Lookup</type>
    <referenceTo>GTM_Assessment_Request__c</referenceTo>
    <relationshipLabel>Readouts</relationshipLabel>
    <relationshipName>GTM_Readouts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>