force-app/main/default/objects/GTM_Readout__c/fields/Draft_Content__c.field-meta.xml
<CustomField>
    <fullName>Draft_Content__c</fullName>
    <description>HTML rich-text content the rep edits while the readout is in Draft. Templated from the assessment score/tier/section breakdown and qualitative fields on generation.</description>
    <label>Draft Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>