force-app/main/default/objects/GTM_Readout__c/fields/Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent_Date__c</fullName>
    <label>Notification Sent Date</label>
    <description>Stamped by GtmReadoutController.publishReadout (sendPublishNotification) once the prospect publish-notification email has actually sent successfully. Left null when the send fails or is skipped (missing prospect email/link) -- the publish itself is never blocked or rolled back by that outcome. Read/write is rep+admin only; guests and content roles have no reason to see this.</description>
    <type>DateTime</type>
</CustomField>