force-app/main/default/objects/GTM_Readout__c/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <label>Offering Key</label>
    <description>Which GTM offering this readout was generated for (e.g. migration-accelerator).</description>
    <required>true</required>
    <length>100</length>
    <type>Text</type>
</CustomField>