force-app/main/default/objects/GTM_Readout__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <description>Carried over from the Assessment Request's Opportunity so the readout shows as a related record on the deal.</description>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Readouts</relationshipLabel>
    <relationshipName>GTM_Readouts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>