force-app/main/default/objects/GTM_Readout__c/fields/Public_Link_Token__c.field-meta.xml
<CustomField>
    <fullName>Public_Link_Token__c</fullName>
    <label>Public Link Token</label>
    <description>Cryptographically random token populated only on publish. GtmReadoutPublicController.getPublishedReadout is the only query path that reads this; unpublishReadout clears it immediately so an old token stops resolving.</description>
    <length>64</length>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <unique>true</unique>
    <type>Text</type>
</CustomField>