force-app/main/default/objects/GTM_Readout__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <label>Published Date</label>
    <description>Set by GtmReadoutController.publishReadout when Status moves from Approved to Published. Publishing stays a rep action -- approval never mints a link.</description>
    <type>DateTime</type>
</CustomField>