force-app/main/default/objects/GTM_Readout__c/fields/Readout_Data__c.field-meta.xml
<CustomField>
    <fullName>Readout_Data__c</fullName>
    <description>Frozen structured snapshot of the assessment, written ONCE by GtmReadoutModel at draft generation and never edited afterwards. It is the half of the readout that is measurement rather than prose: scores, the band ladders they were scored against, per-dimension provenance, capability gaps, estate figures and the horizon. gtmReadoutView renders the designed readout from this plus the approved prose. Frozen on purpose — a later recalibration of the score bands must not silently redraw an already-approved readout&apos;s ladder.</description>
    <label>Readout Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>