force-app/main/default/objects/GTM_Readout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All Readouts</label>
    <columns>NAME</columns>
    <columns>Offering_Key__c</columns>
    <columns>Status__c</columns>
    <columns>Assessment_Request__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Approved_By__c</columns>
    <columns>Published_Date__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>